--- a/Javascript2/index.html
+++ b/Javascript2/index.html
@@ -1,1 +1,33 @@
+/* 
+   Emre Jenedi
+  Date: 09/27/2025
+*/
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Flex Panels </title>
+<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<div class="buttons">
+  <button id="resetBtn">Reset </button>
+  <button id="open3Btn">Open Panel 3</button>
+  <button id="open5Btn">Open Panel 5</button>
+  <button id="sequenceBtn">Sequence Panels</button>
+</div>
+
+<div class="panels">
+  <div class="panel panel1"><p>Hey</p><p>Let's</p><p>Dance</p></div>
+  <div class="panel panel2"><p>Give</p><p>Take</p><p>Receive</p></div>
+  <div class="panel panel3"><p>Experience</p><p>It</p><p>Today</p></div>
+  <div class="panel panel4"><p>Give</p><p>All</p><p>You can</p></div>
+  <div class="panel panel5"><p>Life</p><p>In</p><p>Motion</p></div>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
