--- a/Javascript3/index.html
+++ b/Javascript3/index.html
@@ -1,1 +1,26 @@
+<!-- 
+  Emre Jenedi
+  Date: 10/08/2025
+--><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Sun/Moon</title>
+  <link rel="icon" href="https://fav.farm/☀️" />
+    <link rel="stylesheet" href="style.css">
+  
+</head>
+<body>
 
+  <div class="hero">
+    <h1 contenteditable>🔥OYY!</h1>
+  </div>
+
+  <div class="counter">Clicks: <span id="count">0</span></div>
+  <button class="mode-toggle" id="modeBtn">Mode: ☀️ Sun</button>
+  <button class="reset-btn" id="resetBtn">🔄 Reset</button>
+  <script src="script.js"></script>
+ 
+
+</body>
+</html>
