--- a/Javascript4/index.html
+++ b/Javascript4/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Everything in between should also be set to checked</p>
+      <p>Everything checked</p>
     </div>
     <div class="item">
       <input type="checkbox">
@@ -48,7 +48,7 @@
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Just regular JavaScript</p>
+      <p>Just  JavaScript</p>
     </div>
     <div class="item">
       <input type="checkbox">
@@ -56,10 +56,11 @@
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Don't forget to tweet your result!</p>
+      <p>Don't tweet your result!</p>
     </div>
   </div>
 
 <script src="script.js"></script>
 </body>
 </html>
+
