--- a/Javascriptfinal/index.html
+++ b/Javascriptfinal/index.html
@@ -1,1 +1,41 @@
+<!--
+  Emre Jenedi
+  Date: 10/29/2025
+-->
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JavaScript Calculator</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>JavaScript Calculator</h1>
+
+  <label for="num">Enter your desired number!</label>
+  <input type="number" id="num" placeholder="e.g. 1">
+  <button id="calcBtn">Calculate!</button>
+  <button id="resetBtn">Reset</button>
+  <button id="luckyBtn">I Feel Lucky Today 🍀</button>
+
+  <div id="results">
+    <div>
+      <p id="addition"></p>
+    </div>
+    <div>
+      <p id="subtraction"></p>
+    </div>
+    <div>
+      <p id="multiplication"></p>
+    </div>
+    <div>
+      <p id="division"></p>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
