--- a/Javascriptfinal/index.html
+++ b/Javascriptfinal/index.html
@@ -22,20 +22,26 @@
   <button id="luckyBtn">I Feel Lucky Today 🍀</button>
 
   <div id="results">
-    <div>
-      <p id="addition"></p>
-    </div>
-    <div>
-      <p id="subtraction"></p>
-    </div>
-    <div>
-      <p id="multiplication"></p>
-    </div>
-    <div>
-      <p id="division"></p>
-    </div>
+  <div>
+    <h2>Addition</h2>
+    <p id="addition"></p>
   </div>
+  <div>
+    <h2>Subtraction</h2>
+    <p id="subtraction"></p>
+  </div>
+  <div>
+    <h2>Multiplication</h2>
+    <p id="multiplication"></p>
+  </div>
+  <div>
+    <h2>Division</h2>
+    <p id="division"></p>
+  </div>
+</div>
+
 
   <script src="script.js"></script>
 </body>
 </html>
+
